MDEV-423: SHOW EXPLAIN: 'Using where' for a subquery is shown in EXPLAIN, but not in SHOW EXPLAIN - Take into account that the optimizer may run the subquery, delete it,   and then make a JOIN::optimize call again.